# SEANCE

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini  julia4d.py  main.cpp  main.py  requirements.txt  search.py  test_all_features.py
cpp/: CMakeLists.txt  setup_dependencies.bat
cpp/include/: soundshop_wasm.h
cpp/scripts/: soundshop_music.py  soundshop_signals.py  soundshop_tools.py
cpp/scripts/wasm_examples/: README.md  gain.c  midi_transpose.c  tremolo.c
cpp/src/: app.cpp  app.h  audio_cache.cpp  audio_cache.h  audio_crossfader.h  audio_engine.cpp  audio_engine.h  audio_export.cpp  audio_export.h  automation.cpp  automation.h  builtin_effects.h  builtin_synth.cpp  builtin_synth.h  cache_processor.h  convolution_editor.cpp  convolution_editor.h  convolution_processor.cpp  convolution_processor.h  drum_synth.cpp  drum_synth.h  effect_regions.h  fft_util.cpp  fft_util.h  gain_processor.h  graph_processor.cpp  graph_processor.h  help_utils.h  hotkey_manager.cpp  hotkey_manager.h  hrtf_data.cpp  hrtf_data.h  layered_wave_editor.cpp  layered_wave_editor.h  main.cpp  main_window.cpp  main_window.h  melody_player.cpp  melody_player.h  midi_device_wizard.cpp  (+62 more)
docs/: convolution.html  getting-started.html  graph-basics.html  index.html  keyboard-shortcuts.html  layers-and-groups.html  midi-input.html  midi-modulator.html  piano-roll.html  pin-kinds.html  style.css  terrain-synth.html  trigger-node.html  wavetables.html
